--- a/new_research_video_retrieval.ipynb
+++ b/new_research_video_retrieval.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -36,8 +36,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'ALBEF'...\n",
             "remote: Enumerating objects: 353, done.\u001b[K\n",
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,8 +65,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/ALBEF\n",
             "--2025-06-11 06:24:56--  https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/ALBEF.pth\n",
@@ -85,12 +85,14 @@
       ],
       "source": [
         "%cd /content/ALBEF\n",
-        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/ALBEF.pth"
+        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/ALBEF.pth\n",
+        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/mscoco.pth\n",
+        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/mscoco.pth"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -100,8 +102,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting ruamel.yaml\n",
             "  Downloading ruamel.yaml-0.18.14-py3-none-any.whl.metadata (24 kB)\n",
@@ -244,32 +246,38 @@
         }
       ],
       "source": [
-        "!pip install ruamel.yaml timm==0.4.9 einops transformers gdown decord"
+        "!pip install ruamel.yaml timm==0.4.9 einops transformers gdown decord opencv-python scikit-learn\n",
+        "# apt update && apt install -y libgl1"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Data"
-      ],
       "metadata": {
         "id": "5egACFpoLjzf"
-      }
+      },
+      "source": [
+        "## Data"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd mkdir /content/data\n",
-        "!wget https://www.robots.ox.ac.uk/~maxbain/frozen-in-time/data/MSRVTT.zip -P /content/data; unzip data/MSRVTT.zip -d /content/data"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OZ7gxE5ULp96"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "%cd mkdir /content/data\n",
+        "!wget https://www.robots.ox.ac.uk/~maxbain/frozen-in-time/data/MSRVTT.zip -P data; unzip data/MSRVTT.zip -d data"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lX9bWKkWLjkr"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "\n",
@@ -285,30 +293,25 @@
         "else:\n",
         "  print(f\"Directory not found: {msrvtt_dir}\")\n",
         "  print(\"Please run the preceding cell to download and extract the data.\")"
-      ],
-      "metadata": {
-        "id": "lX9bWKkWLjkr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "7IyuXFQ3LmE1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## create train, test, val json file"
-      ],
       "metadata": {
         "id": "lGjARZ_TKTLs"
-      }
+      },
+      "source": [
+        "## create train, test, val json file"
+      ]
     },
     {
       "cell_type": "code",
@@ -322,8 +325,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "{\n",
             "  \"info\": {\n",
@@ -392,6 +395,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qwSx4FYxHM0N",
+        "outputId": "fdb342cb-32b4-4605-cd1f-065920c2aa4c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting /content/ALBEF/prepare_msrvtt_data.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile /content/ALBEF/prepare_msrvtt_data.py\n",
         "import json\n",
@@ -511,30 +531,11 @@
         "print(f\"Đã lưu annotation kiểm tra vào {OUTPUT_TEST_FILE}\")\n",
         "\n",
         "print(\"Hoàn tất quá trình phân chia dữ liệu!\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qwSx4FYxHM0N",
-        "outputId": "fdb342cb-32b4-4605-cd1f-065920c2aa4c"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting /content/ALBEF/prepare_msrvtt_data.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python /content/ALBEF/prepare_msrvtt_data.py"
-      ],
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -542,11 +543,10 @@
         "id": "27cGfLqnHW9o",
         "outputId": "32e7465e-9467-4801-fd91-59f0f3289c8c"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Đang tải file annotation đầy đủ từ: /content/drive/MyDrive/Intern_FPT/AI/DATASET/MSRVTT/annotation/MSR_VTT.json\n",
             "Đang tải ID video huấn luyện từ: /content/drive/MyDrive/Intern_FPT/AI/DATASET/MSRVTT/high-quality/structured-symlinks/test_list_mini.txt\n",
@@ -564,16 +564,19 @@
             "Hoàn tất quá trình phân chia dữ liệu!\n"
           ]
         }
+      ],
+      "source": [
+        "!python /content/ALBEF/prepare_msrvtt_data.py"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## main compponent"
-      ],
       "metadata": {
         "id": "w_xvXFMvKvqN"
-      }
+      },
+      "source": [
+        "## main compponent"
+      ]
     },
     {
       "cell_type": "code",
@@ -587,8 +590,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting /content/ALBEF/dataset/__init__.py\n"
           ]
@@ -865,8 +868,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting /content/ALBEF/configs/Retrieval_msrvtt.yaml\n"
           ]
@@ -929,8 +932,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting /content/ALBEF/models/xbert.py\n"
           ]
@@ -2856,6 +2859,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ojJCWf8hInNc",
+        "outputId": "1f6d8e9b-ad8b-45bb-dbb7-11aed81284ca"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting /content/ALBEF/models/model_retrieval.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile /content/ALBEF/models/model_retrieval.py\n",
         "from functools import partial\n",
@@ -3093,27 +3113,27 @@
         "\n",
         "    output = torch.cat(tensors_gather, dim=0)\n",
         "    return output"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ojJCWf8hInNc",
-        "outputId": "1f6d8e9b-ad8b-45bb-dbb7-11aed81284ca"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting /content/ALBEF/models/model_retrieval.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B292uaTBP8-Z",
+        "outputId": "aca65fd9-b327-47e2-f876-6ad8976f9b85"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting /content/ALBEF/scheduler/scheduler_factory.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile /content/ALBEF/scheduler/scheduler_factory.py\n",
         "# File: scheduler/scheduler_factory.py\n",
@@ -3207,23 +3227,6 @@
         "        )\n",
         "\n",
         "    return lr_scheduler, num_epochs"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "B292uaTBP8-Z",
-        "outputId": "aca65fd9-b327-47e2-f876-6ad8976f9b85"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting /content/ALBEF/scheduler/scheduler_factory.py\n"
-          ]
-        }
       ]
     },
     {
@@ -3238,8 +3241,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting /content/ALBEF/Retrieval.py\n"
           ]
@@ -3669,7 +3672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -3679,8 +3682,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/ALBEF\n",
             "/usr/local/lib/python3.11/dist-packages/torch/distributed/launch.py:208: FutureWarning: The module torch.distributed.launch is deprecated\n",
@@ -3827,7 +3830,11 @@
         "!python -m torch.distributed.launch --nproc_per_node=1 --use_env Retrieval.py \\\n",
         "--config ./configs/Retrieval_msrvtt.yaml \\\n",
         "--output_dir output/Retrieval_msrvtt_baseline \\\n",
-        "--checkpoint /content/ALBEF/ALBEF.pth"
+        "--checkpoint /content/ALBEF/ALBEF.pth\n",
+        "\n",
+        "\"\"\"\n",
+        "torchrun --nproc_per_node=2 Retrieval.py --config ./configs/Retrieval_msrvtt.yaml --output_dir output/Retrieval_msrvtt_ddp --checkpoint mscoco.pth \n",
+        "\"\"\""
       ]
     },
     {
@@ -3841,9 +3848,10 @@
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -3851,8 +3859,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
