mistake in copy model fixed

--- a/new_research_video_retrieval.ipynb
+++ b/new_research_video_retrieval.ipynb
@@ -86,8 +86,7 @@
       "source": [
         "%cd /content/ALBEF\n",
         "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/ALBEF.pth\n",
-        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/mscoco.pth\n",
-        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/mscoco.pth"
+        "!wget https://storage.googleapis.com/sfr-pcl-data-research/ALBEF/mscoco.pth\n"
       ]
     },
     {
@@ -246,7 +245,7 @@
         }
       ],
       "source": [
-        "!pip install ruamel.yaml timm==0.4.9 einops transformers gdown decord opencv-python scikit-learn\n",
+        "!pip3 install ruamel.yaml timm==0.4.9 einops transformers gdown decord opencv-python scikit-learn\n",
         "# apt update && apt install -y libgl1"
       ]
     },
@@ -535,7 +534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -566,7 +565,8 @@
         }
       ],
       "source": [
-        "!python /content/ALBEF/prepare_msrvtt_data.py"
+        "!python /content/ALBEF/prepare_msrvtt_data.py\n",
+        "# python3 prepare_msrvtt_data.py"
       ]
     },
     {
