--- a/new_research_video_retrieval.ipynb
+++ b/new_research_video_retrieval.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -50,7 +50,9 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/salesforce/ALBEF.git"
+        "!git clone https://github.com/salesforce/ALBEF.git\n",
+        "# git clone -b MIX_VoP https://github.com/MonsieurNam/video-via-text-retrieval.git\n",
+        "\n"
       ]
     },
     {
