--- a/new_research_video_retrieval.ipynb
+++ b/new_research_video_retrieval.ipynb
@@ -52,6 +52,10 @@
       "source": [
         "!git clone https://github.com/salesforce/ALBEF.git\n",
         "# git clone -b MIX_VoP https://github.com/MonsieurNam/video-via-text-retrieval.git\n",
+        "# apt update && apt install python3-pip -y\n",
+        "# apt update && apt install git -y\n",
+        "# apt update && apt install curl -y\n",
+        "# apt update && apt install unzip -y\n",
         "\n"
       ]
     },
